--- a/addons/cni-canal/canal.yaml
+++ b/addons/cni-canal/canal.yaml
@@ -3399,6 +3399,11 @@ spec:
             - --ip-masq
             - --kube-subnet-mgr
           env:
+            - name: FLANNELD_IFACE_REGEX
+              valueFrom:
+                configMapKeyRef:
+                  key: canal_iface_regex
+                  name: canal-config
             - name: POD_NAME
               valueFrom:
                 fieldRef:
