Set Canal/Flannel interface for Hetzner E2E tests
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/e2e/testdata/containerd_simple_external.yaml
+++ b/test/e2e/testdata/containerd_simple_external.yaml
@@ -11,6 +11,11 @@ addons:
   enable: true
   addons:
   - name: default-storage-class
+  {{ if hasPrefix .INFRA "hetzner" }}
+  - name: cni-canal
+    params:
+      IFACE: ens10
+  {{ end }}
 
 cloudProvider:
   external: true
