--- a/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
+++ b/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
@@ -17,3 +17,8 @@ addons:
   enable: true
   addons:
   - name: default-storage-class
+  {{ if hasPrefix .INFRA "hetzner" }}
+  - name: cni-canal
+    params:
+      IFACE: ens10
+  {{ end }}
