--- a/.prow/generated.yaml
+++ b/.prow/generated.yaml
@@ -658,6 +658,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -681,6 +683,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -692,7 +696,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-install-containerd-external-v1.27.11
   optional: false
   path_alias: k8c.io/kubeone
@@ -704,6 +708,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -1368,6 +1374,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -1391,6 +1399,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -1402,7 +1412,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-install-containerd-external-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -1414,6 +1424,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -2078,6 +2090,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -2101,6 +2115,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -2112,7 +2128,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-install-containerd-external-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -2124,6 +2140,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -3406,6 +3424,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -3434,6 +3454,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -3450,7 +3472,7 @@ presubmits:
     repo: kubeone
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-stable-upgrade-containerd-external-from-v1.27.11-to-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -3462,6 +3484,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -4267,6 +4291,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -4295,6 +4321,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -4311,7 +4339,7 @@ presubmits:
     repo: kubeone
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-stable-upgrade-containerd-external-from-v1.28.7-to-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -4323,6 +4351,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -4986,6 +5016,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -5009,6 +5041,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -5020,7 +5054,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-calico-containerd-external-v1.27.11
   optional: false
   path_alias: k8c.io/kubeone
@@ -5032,6 +5066,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -5695,6 +5731,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -5718,6 +5756,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -5729,7 +5769,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-calico-containerd-external-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -5741,6 +5781,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -6404,6 +6446,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -6427,6 +6471,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -6438,7 +6484,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-calico-containerd-external-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -6450,6 +6496,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7113,6 +7161,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7136,6 +7186,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7147,7 +7199,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-cilium-containerd-external-v1.27.11
   optional: false
   path_alias: k8c.io/kubeone
@@ -7159,6 +7211,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7822,6 +7876,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7845,6 +7901,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -7856,7 +7914,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-cilium-containerd-external-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -7868,6 +7926,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -8531,6 +8591,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -8554,6 +8616,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -8565,7 +8629,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-cilium-containerd-external-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -8577,6 +8641,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -9382,6 +9448,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -9410,6 +9478,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -9426,7 +9496,7 @@ presubmits:
     repo: kubeone
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-stable-upgrade-cilium-containerd-external-from-v1.27.11-to-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -9438,6 +9508,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -10243,6 +10315,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -10271,6 +10345,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -10287,7 +10363,7 @@ presubmits:
     repo: kubeone
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-stable-upgrade-cilium-containerd-external-from-v1.28.7-to-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -10299,6 +10375,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11060,6 +11138,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11083,6 +11163,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11094,7 +11176,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-legacy-machine-controller-containerd-external-v1.27.11
   optional: false
   path_alias: k8c.io/kubeone
@@ -11106,6 +11188,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11769,6 +11853,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11792,6 +11878,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -11803,7 +11891,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-legacy-machine-controller-containerd-external-v1.28.7
   optional: false
   path_alias: k8c.io/kubeone
@@ -11815,6 +11903,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -12478,6 +12568,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -12501,6 +12593,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
@@ -12512,7 +12606,7 @@ presubmits:
   decorate: true
   labels:
     preset-goproxy: "true"
-    preset-vsphere-legacy: "true"
+    preset-vsphere: "true"
   name: pull-kubeone-e2e-vsphere-flatcar-legacy-machine-controller-containerd-external-v1.29.2
   optional: false
   path_alias: k8c.io/kubeone
@@ -12524,6 +12618,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: 120m
       image: quay.io/kubermatic/build:go-1.22-node-18-5
       imagePullPolicy: Always
       name: ""
